# FaceTracer

./: README.md  pyproject.toml
backend/: main.py
backend/app/api/routes/: face.py
backend/app/core/: config.py  logger.py
backend/app/db/: base.py  engine.py
backend/app/models/: face.py  user.py
backend/app/services/: embedding.py  vector_store.py
