[project]
name = "facetracer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.2",
    "psycopg2-binary>=2.9.11",
    "qdrant-client>=1.16.2",
    "robyn>=0.76.0",
    "sqlalchemy>=2.0.46",
    "sqlalchemy-utils>=0.42.1",
]
